--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -1,20 +1,9 @@
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M3'
-  }
-}
-
 repositories {
   mavenCentral()
 }
 
 apply plugin: 'java'
-apply plugin: 'org.junit.platform.gradle.plugin'
 
 dependencies {
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M3")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0-M3")
+    testCompile 'junit:junit:4.1.12'
 }
