--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'java'
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.graphstream:gs-core:1.3'
+    testCompile 'org.graphstream:gs-ui:1.3'
 }
 
 sourceSets {
