--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.graphstream:gs-core:1.3'
     testCompile 'org.graphstream:gs-ui:1.3'
+    testCompile 'org.antlr:antlr4:4.6'
+
 }
 
 sourceSets {
