--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     testCompile 'org.graphstream:gs-core:1.3'
     testCompile 'org.graphstream:gs-ui:1.3'
     testCompile 'org.antlr:antlr4:4.6'
+    testCompile 'com.google.maps:google-maps-services:0.1.17'
 
 }
 
