--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -1,28 +1,57 @@
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenCentral()
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 apply plugin: 'java'
+apply plugin: 'javafx-gradle-plugin'
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile 'org.graphstream:gs-core:1.3'
-    testCompile 'org.graphstream:gs-ui:1.3'
-    testCompile 'org.antlr:antlr4:4.6'
-    testCompile 'com.google.maps:google-maps-services:0.1.17'
-    testCompile 'com.lynden:GMapsFX:2.10.0'
+    compile 'org.graphstream:gs-core:1.3'
+    compile 'org.graphstream:gs-ui:1.3'
+    compile 'org.antlr:antlr4:4.6'
+    compile 'com.google.maps:google-maps-services:0.1.17'
+    compile 'com.lynden:GMapsFX:2.10.0'
 }
 
 sourceSets {
     main {
-        test {
-            java.srcDirs = ['src']
-        }
+        java.srcDirs = ['src']
+        test.java.srcDirs = ['src/test']
+        resources.srcDirs = ['resources', file('src')] //We add 'src' to include .fxml files (.java files are ignored)
+
+        //DEBUG:
+        //println "java.srcDirs = ${java.srcDirs}"
+        //println "test.java.srcDirs = ${test.java.srcDirs}"
+        //println "resources.srcDirs = ${resources.srcDirs}"
+        //println "java.files = ${java.files.name}"
+        //println "allJava.files = ${allJava.files.name}"
+        //println "resources.files = ${resources.files.name}"
+        //println "allSource.files = ${allSource.files.name}"
+        //println "output.classesDir = ${output.classesDir}"
+        //println "output.resourcesDir = ${output.resourcesDir}"
+        //println "output.files = ${output.files}"
     }
+}
+
+jfx {
+    mainClass = 'Main'
+    jfxMainAppJarName = "Visualizer.jar"
+    vendor = "DES103F17"
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'Main'
+        attributes 'Implementation-Title': 'DES103F17 UPPAAL Visualizer',
+            'Main-Class': 'Main'
     }
 }
