--- a/Visualizer/build.gradle
+++ b/Visualizer/build.gradle
@@ -44,13 +44,13 @@ sourceSets {
 
 jfx {
     mainClass = 'Main'
-    jfxMainAppJarName = "Visualizer.jar"
+    jfxMainAppJarName = "VisuAAL.jar"
     vendor = "DES103F17"
 }
 
 jar {
     manifest {
-        attributes 'Implementation-Title': 'DES103F17 UPPAAL Visualizer',
+        attributes 'Implementation-Title': 'DES103F17 UPPAAL VisuAAL',
             'Main-Class': 'Main'
     }
 }
